secondmaster와 무시파일

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-.metadata
+.metadata/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
 .classpath
 .project
